hphp/hack/test/typecheck/typed_locals/this-error.php.exp
File "this-error.php", line 6, characters 5-22:
You cannot declare $this as a typed local. (Parsing[1002])
